# coffee-bean-classification

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
configs/: A3_mobilenetv3_hbp_224_arcface_source.yaml  B1_mobilenetv3_small_gap.yaml  B2_mobilenetv4_conv_small_gap.yaml  B3_swin_tiny_gap.yaml  B4_efficientnet_b0_gap.yaml  BC2L_convnextv2_hbp_linear_source.yaml  BE2G_efficientnetv2_gap_source.yaml  BE2L_efficientnetv2_hbp_linear_source.yaml  BP2G_pvtv2_gap_source.yaml  BSHG_shvit_gap_source.yaml  BSHH_shvit_hbp_source.yaml  BSHL_shvit_hbp_linear_source.yaml  BV4G_mobilenetv4_gap_source.yaml  BV4H_mobilenetv4_hbp_source.yaml  BV4L_mobilenetv4_hbp_linear_source.yaml  CBD0_mobilenetv3_gap_source.yaml  CBD1_mobilenetv3_hbp_source.yaml  CBD3_mobilenetv3_hbp_balanced_softmax.yaml  CBDC1_mobilenetv3_capacity_residual_hbp_source.yaml  CBDD1_mobilenetv3_decoupled_gap_hbp_fixed_source.yaml  CBDD2_mobilenetv3_decoupled_gap_hbp_learned_source.yaml  E1_mobilenetv3_hbp_local_moe_source.yaml  F2_mobilenetv3_gap_320_arcface_source.yaml  F3_mobilenetv3_hbp_320_arcface_source.yaml  GC0b_mobilenetv3_bilinear_coarse9_source.yaml  H1_mobilenetv3_hbp_hierarchical_source.yaml  M0a_mobilenetv3_gap_fixed_cbam_source.yaml  M0b_mobilenetv3_bilinear_source.yaml  M0lgf_mobilenetv3_gap_lgf_cbam_source.yaml  M1L_mobilenetv3_hbp_linear_source.yaml  M1_mobilenetv3_hbp_source.yaml  M1c_mobilenetv3_hbp_mlp_source.yaml  M1r_mobilenetv3_gap_hbp_residual_source.yaml  M2_mobilenetv3_gap_mmd.yaml  M3_mobilenetv3_gap_lmmd.yaml  M4_mobilenetv3_hbp_dann.yaml  O1_mobilenetv3_hbp_object_crop_source.yaml  P1_paper_mobilenetv3_hbp_ce.yaml  R0_roast_mobilenetv3_gap_source.yaml
docs/: BACKBONE_PROTOCOL.md  CBD_MULTICLASSIFY_PROTOCOL.md  CURRENT_STATE.md  DECOUPLED_DUAL_BRANCH_PROTOCOL.md  EMA_HBP_PROTOCOL.md  FINAL_HBP_RESULTS.md  FINEGRAINED_HBP_ARCFACE.md  GRANULARITY_PROTOCOL.md  HBP_HYPOTHESIS.md  HBP_LINEAR_PROTOCOL.md  HIERARCHICAL_HBP_PROTOCOL.md  LGF_CBAM_HYPOTHESIS.md  OBJECT_CROP_PROTOCOL.md  PAPER_REPRODUCTION_PROTOCOL.md  PAPER_REPRODUCTION_RESULTS.json  ROAST_HBP_PROTOCOL.md  SHVIT_BACKBONE_SCREENING.md  SPPF_ATTENTION_HBP_PROTOCOL.md  SYNTHETIC_DOMAIN_PROTOCOL.md  USK_COFFEE_PROTOCOL.md  XAI_PROTOCOL.md
notebooks/: backbone_benchmark_resumable_colab.ipynb  coffee17_chang_liu_mde_colab.ipynb  coffee17_compact_mpncov_colab.ipynb  coffee17_confusion_pairwise_colab.ipynb  coffee17_dcl_local_detail_colab.ipynb  coffee17_factorized_bilinear_conv_colab.ipynb  coffee17_factorized_bilinear_conv_confirmation_colab.ipynb  coffee17_gap_hierarchy_colab.ipynb  coffee17_hong_classification_colab.ipynb  coffee17_hong_dsconv_confirmation_colab.ipynb  hbp_ablation_colab.ipynb  (+8 more)
(+380 files in other folders)
