[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bilinear-lmmd"
version = "0.1.0"
description = "Lightweight HBP and LMMD experiments for closed-set domain adaptation"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "timm>=1.0.20",
  "huggingface_hub>=0.30",
  "PyYAML>=6.0",
  "scikit-learn>=1.4",
  "scikit-image>=0.23",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
blmmd-train = "bilinear_lmmd.engine.train:main"
blmmd-evaluate = "bilinear_lmmd.engine.evaluate_checkpoint:main"
blmmd-benchmark = "bilinear_lmmd.engine.benchmark:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
